--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
-/* TODO: design your profile with CSS */
+/* Set the color and fonts (the links) */
+
+
+body {
+  color: rgb(20, 20, 20);
+  background-color: rgb(220, 220, 220);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+}
+
+h1 {
+  font-size: 23px;
+  color: #ef6c57;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+h3 {
+  font-size: 18px;
+}
+
+/*group selector*/
+
+h1, h2, h3 {
+  font-family: 'Anonymous Pro', monospace;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(150, 150, 150);
+}
+
+
+/*pseudo class :hover*/
+
+a:hover {
+  color:  #ef6c57;
+}
+
+/*Class (.) and ID (#) slectors*/
+
+.btn-red{
+  background-color: red;
+  color: white;
+  padding: 10px 15px;
+}
+
+.section-white {
+  background: white;                          /* White background */
+  padding: 30px;                              /* Internal space */
+  border-radius: 4px;                         /* Small radius */
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 900px;
+  margin: 10px auto;
+}
+
+.img-cirlce{
+  border-radius: 50%;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.list-inline{
+  list-style: none;
+}
+
+/*descedent selector */
+.list-inline li{
+  display: inline-block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
